@@ -155,8 +155,11 @@ that overrides settings set elsewhere.")
       (icon . shaped-transient)
       (dock . icon)
       (utility . default)
+      (shaded-utility . shaded-transient)
       (toolbar . utility)
+      (shaded-toolbar . shaded-utility)
       (menu . utility)
+      (shaded-menu . shaded-utility)
       (splash . unframed))
     "Frame type fallbacks.")
 
