@@ -1,3 +1,9 @@
+2003-10-21  John Harper  <jsh@unfactored.org>
+
+	* sawfish/wm/frames.jl, sawfish/wm/state/shading.jl: patch from
+	David Reid <dreid@dreid.ath.cx> to fix support shading on new
+	window types
+
 2003-08-16  John Harper  <jsh@unfactored.org>
 
 	Integrated patches from Shun-ichi TAHARA <jado@flowernet.gr.jp>:
